# parsnips

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: check_formatting_and_run_tests.yml
.helix/: languages.toml
parsnips-asm/: Cargo.toml
parsnips-asm/src/: lib.rs
parsnips-cli/: Cargo.toml
parsnips-cli/src/: asm.rs  main.rs  run.rs
parsnips-emu/: Cargo.toml
parsnips-emu/src/: lib.rs
parsnips-emu/src/inst/: mod.rs  opcode.rs
parsnips-inst/: Cargo.toml
parsnips-inst/src/: funct.rs  function.rs  lib.rs  opcode.rs
parsnips-parser/: Cargo.toml
parsnips-parser/src/: lex.rs  lib.rs  mips.pest  parse.rs
parsnips-parser/tests/: Fibonacci.asm  basic.asm  parse.rs
parsnips-util/: Cargo.toml
parsnips-util-proc-macro/: Cargo.toml
parsnips-util-proc-macro/src/: lib.rs
parsnips-util/src/: inst.rs  lib.rs  reg.rs  test.rs
parsnips-util/src/inst/: opcode.rs  regimm.rs  special.rs  special3.rs
parsnips-web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
parsnips-web/src/: App.svelte
test/: fib.asm
