[package]
name = "parsnips-asm"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Toohey <contact@mtoohey.com>"]
description = "Assembler for parsnips MIPS tools."
readme = "../README.md"
homepage = "https://github.com/mtoohey31/parsnips"
repository = "https://github.com/mtoohey31/parsnips"
license = "MIT OR Apache-2.0"

[dependencies]
# instruction interpretation
parsnips-inst.path = "../parsnips-inst"
# ast types of input programs to be assembled
parsnips-parser.path = "../parsnips-parser"

# converting between opcode/function enums and strings
strum = { version = "0.24", default-features = false }
strum_macros = { version = "0.24", default-features = false }
# no_std hash maps
hashbrown = "0.12"

# .ascii and .asciiz handling
ascii = "1.0"
