[package]
name = "parsnips-cli"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Toohey <contact@mtoohey.com>", "Nathan Gerryts <nathgerr@gmail.com>"]
description = "CLI for parsnips MIPS tools."
readme = "../README.md"
homepage = "https://github.com/mtoohey31/parsnips"
repository = "https://github.com/mtoohey31/parsnips"
license = "MIT OR Apache-2.0"

default-run = "par"

[[bin]]
name = "par"
path = "src/main.rs"

[dependencies]
# assembling programs
parsnips-asm.path = "../parsnips-asm"
# emulating programs
parsnips-emu.path = "../parsnips-emu"
# parsing programs
parsnips-parser.path = "../parsnips-parser"

# parsing command-line arguments
clap = { version = "3", features = ["derive"] }

# error wrapping
anyhow = "1.0"
