[package]
name = "parsnips-emu"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Toohey <contact@mtoohey.com>", "Nathan Gerryts <nathgerr@gmail.com>"]
description = "Emulator for parsnips MIPS tools."
readme = "../README.md"
homepage = "https://github.com/mtoohey31/parsnips"
repository = "https://github.com/mtoohey31/parsnips"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# needed for instruction interpretation
parsnips-inst.path = "../parsnips-inst"

# needed for compiling to wasm
wasm-bindgen = "0.2.80"
# needed for syscall handler type definitions when targetting wasm32
js-sys = "0.3.57"

[dev-dependencies]
# for testing compiled wasm
wasm-bindgen-test = "0.3.30"
