[package]
name = "parsnips-parser"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Toohey <contact@mtoohey.com>", "Nathan Gerryts <nathgerr@gmail.com>"]
description = "Parser for parsnips MIPS tools."
homepage = "https://github.com/mtoohey31/parsnips"
repository = "https://github.com/mtoohey31/parsnips"

[dependencies]
# for creating the parser
pest = "2.1.3"
# for creating the parser with a procedural macro from a .pest file
pest_derive = "2.1.0"
