[package]
name = "parsnips-util"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Toohey <contact@mtoohey.com>"]
description = "Utilities for parsnips MIPS tools."
readme = "../README.md"
homepage = "https://github.com/mtoohey31/parsnips"
repository = "https://github.com/mtoohey31/parsnips"
license = "MIT OR Apache-2.0"

[dependencies]
# encoding_table macro
parsnips-util-proc-macro.path = "../parsnips-util-proc-macro"

# encoding enum conversion
num_enum = { version = "0.5.7", default-features = false }
