[package]
name = "parsnips-util"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Toohey <contact@mtoohey.com>"]
description = "Utilities for parsnips MIPS tools."
readme = "../README.md"
homepage = "https://github.com/mtoohey31/parsnips"
repository = "https://github.com/mtoohey31/parsnips"
license = "MIT OR Apache-2.0"

[dependencies]
# encoding_table macro
parsnips-util-proc-macro.path = "../parsnips-util-proc-macro"

# idiomatic encoding representation
bitbybit = "1.1.1"
arbitrary-int = "1.2.1"
